libhdate (1.0.0)

  * first major reales number.
  * start to number the shared library.
  * stable api.
  * updated utility programs hdate/hcal.
  * added man files for library and utility programs.
  * python and perl bindings.
  * ru, fr, he, es translations, thanks to Peled Esti and Boris Peterberg.
  * added debian dir and RH spec file for easy packing, thanks to Oron Peled.

    -- Yaacov Zamir <kzamir@wall.co.il>  Tue, 08 March 2005 18:13
    
libhdate (0.30.0)

  * add es_MX translation by Peled Esti <esti@actcom.co.il>  
  * initial russian translation by Boris Peterberg

   -- Yaacov Zamir <kzamir@wall.co.il>  Tue, 08 March 2005 18:13
       
libhdate (0.30.0)

  * cpp, python and perl bindings
  * examples for the new libhdate bindings 

   -- Yaacov Zamir <kzamir@wall.co.il>  Fri, 04 March 2005 15:19:29

libhdate (0.22.0)

  * Michael Kaminsky's patch to Shavot II on diaspora reading.

   -- Yaacov Zamir <kzamir@wall.co.il>  Mon, 28 Feb 2005 08:12:31

libhdate (0.22.0)

  * New hebcal examples

   -- Yaacov Zamir <kzamir@wall.co.il>  Fri, 25 Feb 2005 11:15:18
   
libhdate (0.21.0)
  
  * New spec file by Oron Peled
  * Diaspora holydays/readings
  * New sunrise sunset functions
  * New html examples
  * New configure options to build / not build the examples
  
   -- Yaacov Zamir <kzamir@wall.co.il>  Fri, 25 Feb 2005 11:15:18

libhdate (0.17.0)
  
  * API chages.
  * base struct change.

   -- Yaacov Zamir <kzamir@wall.co.il>  Mon, 22 Feb 2005 19:34:22
   
libhdate (0.16.3)
  
  * Try to fix date conversion bug, thanks Michael Kaminsky.

   -- Yaacov Zamir <kzamir@wall.co.il>  Mon, 21 Feb 2005 09:03:12

libhdate (0.16.2)
  
  * Syntax error, and weeks calculation bug fixed by Michael Kaminsky.

   -- Yaacov Zamir <kzamir@wall.co.il>  Sun, 20 Feb 2005 06:53:12

libhdate (0.16.1)

  * Fix locale bug in int_to_string.
  * Add examples directory.
  * Minor bug fixes.

 -- Yaacov Zamir <kzamir@wall.co.il>  Sat, 19 Feb 2005 20:07:19