@@ -1,4 +1,4 @@
-libhdate (1.0.0)
+libhdate (1.0.1)
 
   * first major reales number.
   * start to number the shared library.
@@ -6,6 +6,7 @@ libhdate (1.0.0)
   * updated utility programs hdate/hcal.
   * added man files for library and utility programs.
   * python and perl bindings.
+  * free pascal binding by Ido Kanner <idokan@gmail.com>
   * ru, fr, he, es translations, thanks to Peled Esti and Boris Peterberg.
   * added debian dir and RH spec file for easy packing, thanks to Oron Peled.
 
